@@ -47,9 +47,9 @@ Please read INSTALL and then FAQ
 
 Contributors
 ------------
-Anton Raharja
+Anton Raharja (anton)
 Abdul Hanan
 Helge Larsen
 Aaron Simmons
 Warsito
-Stephane Rosa
+Stephane Rosa (srosa)
