@@ -47,9 +47,12 @@ function websend2pv($username,$sms_to,$message,$sms_type='text',$unicode=0)
         $message = substr ($message,0,$max_length-1);
     }
     $sms_msg = $message;
-    $sms_msg = str_replace("\r","",$sms_msg);
-    $sms_msg = str_replace("\n","",$sms_msg);
-    $sms_msg = str_replace("\""," ",$sms_msg);
+    
+    // \r and \n is ok - http://smstools3.kekekasvi.com/topic.php?id=328
+    //$sms_msg = str_replace("\r","",$sms_msg);
+    //$sms_msg = str_replace("\n","",$sms_msg);
+    $sms_msg = str_replace("\"","'",$sms_msg);
+
     $mobile_sender = str_replace("\'","",$mobile_sender);
     $mobile_sender = str_replace("\"","",$mobile_sender);
     $sms_sender = str_replace("\'","",$sms_sender);
@@ -113,9 +116,12 @@ function websend2group($username,$gp_code,$message,$sms_type='text')
 	    $p_num = $db_row[p_num];
 	    $sms_to = $p_num;
 	    $sms_msg = $message;
-	    $sms_msg = str_replace("\r","",$sms_msg);
-	    $sms_msg = str_replace("\n","",$sms_msg);
-	    $sms_msg = str_replace("\""," ",$sms_msg);
+	    
+	    // \r and \n is ok - http://smstools3.kekekasvi.com/topic.php?id=328
+	    //$sms_msg = str_replace("\r","",$sms_msg);
+	    //$sms_msg = str_replace("\n","",$sms_msg);
+	    $sms_msg = str_replace("\"","'",$sms_msg);
+	    
 	    $mobile_sender = str_replace("\'","",$mobile_sender);
 	    $mobile_sender = str_replace("\"","",$mobile_sender);
 	    $sms_sender = str_replace("\'","",$sms_sender);
