@@ -1,6 +1,7 @@
 Version 0.9.5-svn - unknown
 - change label success to handled and fail to unhandled, status on incoming SMS (anton)
 - revert back kannel gateway, use fsockopen due to improper HTTP response from kannel (srosa)
+- fix allow \r and \n in SMS text, http://smstools3.kekekasvi.com/topic.php?id=328 (anton)
 - fix kannel gateway, bearerbox to accept hostname, not only IP (srosa)
 - fix kannel gateway, missing bearerbox host and sendsms port, plugin/gateway/kannel/fn.php (anton)
 - fix dlr-url misformed, plugin/gateway/kannel/fn.php (anton)
